--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,15 @@
   box-shadow: 0 0 20px #facf0ecc;
 }
 
+.arraow-hover {
+  transition: box-shadow 0.3s ease-in-out;
+  display: flex;
+}
+
+.arraow-hover:hover {
+  box-shadow: 0 0 20px #facf0ecc;
+}
+
 .button2 {
   color: #212020;
   background-color: #facf0e;
