--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 
 /* Hover effect for glowing */
 .button1:hover {
-  box-shadow: 0 0 20px #facf0ecc;
+  box-shadow: 0 0 20px #fff;
 }
 
 .arraow-hover {
@@ -28,7 +28,7 @@
 }
 
 .arraow-hover:hover {
-  box-shadow: 0 0 20px rgba(250, 207, 14, 0.8);
+  box-shadow: 0 0 20px #fff;
 }
 
 .button2 {
@@ -41,8 +41,13 @@
   border-radius: 8px;
   font-weight: 400;
   display: flex;
-  justify-content: center; /* Center the text horizontally */
-  align-items: center; /* Center the text vertically */
+  justify-content: center;
+  align-items: center;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.button2:hover {
+  box-shadow: 0 0 20px #facf0ecc;
 }
 
 .button3 {
